JSP_test/WebContent/error/500_error.jsp
<%@ page language="java" contentType="text/html; charset=UTF-8"
    pageEncoding="UTF-8"%>
<%@ page trimDirectiveWhitespaces="true"%>
<!DOCTYPE html>
<html>
<head>
<meta charset=UTF-8">
<title>Insert title here</title>
</head>
<body>
	<h1>서버에 장애가 발생해서 죄송합니다. 양해바랍니다.</h1>
</body>
</html>